src/objects/Apttus__TemplateDynamicSection__c.object
<CustomObject>
    <description>Represents a dynamic section in a template</description>
    <fields>
        <fullName>Apttus__FilterCriteria__c</fullName>
        <description>Criteria spec used for filtering the line items. This is a SOQL WHERE clause</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Criteria spec used for filtering the line items. This is a SOQL WHERE clause</inlineHelpText>
        <label>Filter Criteria</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__RulesetName__c</fullName>
        <description>The name of the rule set to evaluate</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of the rule set to evaluate</inlineHelpText>
        <label>Ruleset Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__TemplateId__c</fullName>
        <description>ID of the associated template</description>
        <inlineHelpText>ID of the associated template</inlineHelpText>
        <label>Template</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipLabel>Template Dynamic Sections</relationshipLabel>
        <relationshipName>TemplateDynamicSections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Template Dynamic Section</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Dynamic Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>